changes index html

--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ padding: 0;
     padding:auto;
     max-width: 100%;
     max-height: 100%;
-    border-st:;yle: solid;
+    border-style: solid;
 }
 
 .pull-right {
