--- a/style.css
+++ b/style.css
@@ -64,7 +64,6 @@ padding: 0;
 }
 
 .quizzies   {
-
     width:30em;
     length:3em;
     float: right !important;
@@ -89,8 +88,8 @@ padding: 0;
 }
 
 .adimage {
-
-    margin:1em -5em 1em -3em;
+    padding: 0em 14em 1em 0em;
+    margin:0em 2em 1em 1em;
     max-width: 100%;
     max-height: 100%;
     border-style: solid;
