--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,11 @@ body {
     padding: .8em;
 }
 
+.navbar-nav > li{
+  padding-left:40px;
+  padding-right:50px;
+}
+
 
 .service-list {
 list-style-type: none;
@@ -61,14 +66,14 @@ padding: 0;
   float: left;
 }
 .container {
-    float:left;
+    padding:0em 4em 0em 0em;
 }
 
 .quizzies   {
     width:30em;
     length:3em;
-    float: right !important;
-
+    /*float: right !important;*/
+    padding: 0em 0em 0em 4em;
 }
 
 .tweets{
