--- a/css/quizzies.css
+++ b/css/quizzies.css
@@ -13,15 +13,19 @@ body {
 
 
 #main {
-    transition: margin-left .5s;
-    padding: .8em;
+  transition: margin-left .5s;
+  padding: .8em;
+}
+
+.juicy-header {
+  text-align: center;
+
 }
 
 .navbar-nav > li{
   padding-left:40px;
   padding-right:50px;
 }
-
 
 .service-list {
 list-style-type: none;
@@ -31,7 +35,6 @@ display: inline-block;
 
 }
 
-
 .service-list p,.service-list h3 {
 text-align: right;
 display:inline-block;
@@ -40,18 +43,17 @@ padding: 0;
 
 .social {
     float: right;
-    padding-right: 5em;
+    margin: 0em 1em 2em 0em;
+    padding: 0em 0em 0em 1em;
 
 }
 
 
 .iframe{
-    border:solid;
-    border-width: 5px;
-    width:75%;
-    height:50%;
+    width:100%;
+    height:100%;
     text-align: center;
-    padding:.5em 0em 0em 0em;
+    padding:.5em 11em 0em 0em;
     margin: 5em 6em 0em 3em;
 }
 
@@ -65,7 +67,7 @@ padding: 0;
 .videos {
     float: left;
     font-size: 1em;
-    padding: 0em 0em 0em 1em;
+    padding: 0em 0em 0em 0em;
 }
 .quizzies   {
     width:35em;
@@ -82,22 +84,19 @@ padding: 0;
 .stories{
     width:35em;
     length:3em;
-    padding: 11em 0em 0em 0em;
+    padding: 7em 0em 0em 0em;
 }
 
 .contributors{
     width:28em;
     length:1em;
     margin-right: 15em;
-
 }
 
 .adimage {
-    padding: 0em 0em 0em 0em;
+    width: 100%;
+    height: 100%;
 
-    max-width: 100%;
-    max-height: 100%;
-    border-style: solid;
     }
 
 @media screen and (max-width: 500px) {
