--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,8 @@ padding: 0;
 
 .social {
     float: right;
-    padding-right: 5em;
+    margin: 0em 1em 2em 0em;
+    padding: 0em 0em 0em 1em;
 
 }
 
@@ -98,7 +99,7 @@ padding: 0;
     margin:0em 2em 1em 1em;
     max-width: 100%;
     max-height: 100%;
-    border-style: solid;
+
 }
 
 .pull-right {
@@ -106,12 +107,11 @@ padding: 0;
 }
 
 .adimagevideo {
-
-    width:20em;
-    height:44em;
+    width:100%;
+    height:100%;
     margin:0em 0em 0em 10em;
-    padding: 0em 0em 5em 0em;
-    border-style: solid;
+    padding: 0em 1em 6em 0em;
+
 }
 
 .email {
@@ -124,15 +124,7 @@ padding: 0;
 
 }
 
-.emailvideo {
-    float: right;
-    width:22em;
-    height:8em;
-    margin:auto;
-    padding: auto;
-    border-style: solid;
 
-}
 
 @media screen and (max-width: 500px) {
     div.mobile-collapse{
