--- a/css/home.css
+++ b/css/home.css
@@ -23,9 +23,27 @@ body {
 }
 
 .navbar-nav > li{
-  padding-left:40px;
-  padding-right:50px;
+  text-align: center;
+  padding:0em 3em 2.3em 2em;
+  margin: 0em 0em -1em 0em;
+  border-left:.5px solid gray;
+  background-color: white;
+
 }
+.navbar-header{
+  background-color: white;
+  border-top-width: 2em;
+  margin: 0em 0em 0em 0em;
+}
+
+.navbar-header > img {
+  width: 100%;
+  height: 100%;
+  padding: 0em 0em -1em 0em;
+  margin: 0em 0em 1em 0em;
+}
+
+
 
 .service-list {
 list-style-type: none;
