--- a/css/home.css
+++ b/css/home.css
@@ -19,31 +19,28 @@ body {
 
 .juicy-header {
   text-align: center;
-
 }
 
 .navbar-nav > li{
+  padding:1em 3em 1em 3em;
+  border-left:1px solid grey;
   text-align: center;
-  padding:0em 3em 2.3em 2em;
-  margin: 0em 0em -1em 0em;
-  border-left:.5px solid gray;
-  background-color: white;
+  height: 7em;
+
+}
+
+.navbar-nav > li a{
+  padding-top:2em;
+  text-align: center;
+
 
 }
 .navbar-header{
   background-color: white;
   border-top-width: 2em;
-  margin: 0em 0em 0em 0em;
+  margin: 0em 1.7em 0em 0em;
+  height: 7em;
 }
-
-.navbar-header > img {
-  width: 100%;
-  height: 100%;
-  padding: 0em 0em -1em 0em;
-  margin: 0em 0em 1em 0em;
-}
-
-
 
 .service-list {
 list-style-type: none;
@@ -62,8 +59,8 @@ padding: 0;
 .social {
     float: right;
     margin: 0em 1em 2em 0em;
-    padding: 0em 0em 0em 1em;
-
+    padding: 1em 1em 1em 1em;
+    border:1px solid grey;
 }
 
 
