--- a/css/home.css
+++ b/css/home.css
@@ -12,12 +12,7 @@ body {
     padding: -4em 0em 0em 0em;
 }
 
-.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
-    background-color: white;
-    color: white;
-    width: 100%;
-    height: 100%
-}
+ul.nav a:hover { color: #fff !important; }
 
 
 #main {
