--- a/css/quiz.css
+++ b/css/quiz.css
@@ -9,13 +9,17 @@ Tags: bootstrap
 body {
   font-family: "Montserrat", sans-serif;
   transition: background-color .5s;
-
 }
 
 
 #main {
   transition: margin-left .5s;
   padding: .8em;
+}
+
+.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
+    color: black;
+    background-color: white;
 }
 
 .navbar-nav > li{
