--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,16 @@ body {
     transition: background-color .5s;
 }
 
+
+
 #main {
     transition: margin-left .5s;
     padding: .8em;
+}
+
+.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
+    color: black;
+    background-color: white;
 }
 
 .navbar-nav > li{
