--- a/css/home.css
+++ b/css/home.css
@@ -28,6 +28,7 @@ body {
 }
 .navbar-default {
   padding:0em 0em 0em 3em;
+  margin:0em 0em 0em 0em;
 }
 
 .navbar-nav > li{
@@ -75,7 +76,7 @@ body {
     margin: 0em 0em 0em 0em;
     padding: 1em 0em 2em 2em;
     border:1px solid grey;
-    width: 60%;
+    width: 100%;
     height:100%;
     text-align: center;
 }
@@ -94,7 +95,10 @@ body {
 
 }
 
-
+ .vertical-line {
+        border-left: 1px solid #eee;
+        height: 100em;
+        }
 
 .videos {
     /*float: left;*/
@@ -111,7 +115,7 @@ body {
 }
 
  h3 {
-    font-size: 1.4em;
+    font-size: 1.3em;
     font-weight: extra bold;
     color:#808080;
 }
