--- a/css/home.css
+++ b/css/home.css
@@ -53,6 +53,10 @@ body {
   height: 7em;
 }
 
+.navbar-header img{
+  margin: 1em 0em 2em 0em;
+}
+
 .service-list {
   list-style-type: none;
   margin:0em 0em 0em 0em;
@@ -72,6 +76,9 @@ body {
   text-align: right;
   display:inline-block;
   padding: 0;
+  font-weight: extra bold;
+  font-size: 1.2em;
+  color: black;
 }
 
 .social {
@@ -91,6 +98,7 @@ body {
   height:0;
   overflow:hidden;
   margin-left: 3em;
+  border: .5em solid black;
 }
 
 .video-container iframe, .video-container object, .video-container embed {
@@ -119,14 +127,14 @@ body {
 
  .vertical-line {
     border-left: 1px solid #eee;
-    height: 70em;
+    height: 98em;
         }
 
 .videos {
     /*float: left;*/
     font-size: 1em;
     color:#808080;
-    padding: 0em 0em 0em 0em;
+    padding: 1em 0em 0em 0em;
     margin: 0em 0em 1em 0em;
 }
 
@@ -156,14 +164,17 @@ body {
 .tweets{
     width:100%;
     length:100%;
-    padding: 0em 0em 0em 0em;
-    margin:0em 1em 0em 0em;
+
+}
+
+.tweets li.service_list{
+
 }
 
 .stories{
     width:100%;
     length:100%;
-    padding: 3em 0em 0em 0em;
+    padding: 0em 0em 0em 0em;
     margin: 3em 0em 0em 3em;
 }
 
