--- a/css/home.css
+++ b/css/home.css
@@ -5,6 +5,9 @@ Description: Bootstrap Blog template converted to WordPress
 Version: 0.0.1
 Tags: bootstrap
 */
+* {
+  border-radius: 0 !important;
+}
 
 body {
     font-family: "Montserrat", sans-serif;
@@ -27,8 +30,14 @@ body {
     background-color: white;
 }
 .navbar-default {
-  padding:0em 0em 0em 3em;
-  margin:0em 0em 0em 0em;
+  padding:0em 0em 0em 0em;
+
+  max-width: 100%;
+}
+
+nav.navbar.navbar-default{
+  padding-left: 2em;
+/*  padding-right: 2em;*/
 }
 
 .navbar-nav > li{
@@ -48,7 +57,7 @@ body {
 .navbar-header{
   background-color: white;
   border-top-width: 2em;
-  padding: 0em 2em 0em 2em;
+  padding: 0em 2.1em 0em 2em;
   margin: 0em 1.7em 0em 0em;
   height: 7em;
 }
@@ -175,7 +184,7 @@ body {
     width:100%;
     length:100%;
     padding: 0em 0em 0em 0em;
-    margin: 3em 0em 0em 3em;
+    margin: 3em 0em 0em -1em;
 }
 
 
