--- a/css/home.css
+++ b/css/home.css
@@ -23,6 +23,7 @@ body {
 
 .juicy-header {
   text-align: center;
+
 }
 
 .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
@@ -85,14 +86,14 @@ nav.navbar.navbar-default{
   text-align: right;
   display:inline-block;
   padding: 0;
-  font-weight: extra bold;
+  font-weight: 900;
   font-size: 1.2em;
   color: black;
 }
 
 .social {
     margin: 0em 0em 0em 0em;
-    padding: 1em 0em 2em 2em;
+    padding: 0em 0em 1em 0em;
     border:1px solid #eee;
     width: 100%;
     height:100%;
@@ -148,15 +149,17 @@ nav.navbar.navbar-default{
 }
 
   h2 {
+    font-family: Montserrat extra bold 1em;
     font-size: 1.7em;
-    font-weight: extra bold;
+    font-weight: 900;
     color:#808080;
     margin-left: 1.5em;
 }
 
  h3 {
+    font-family: Montserrat extra bold 1em;
     font-size: 1.3em;
-    font-weight: extra bold;
+    font-weight: 900;
     color:#808080;
     margin-left: 1.5em;
 }
