--- a/css/home.css
+++ b/css/home.css
@@ -104,7 +104,7 @@ nav.navbar.navbar-default{
 .video-container {
   position:relative;
   padding-bottom:56.25%;
-  padding-top:30px;
+  padding-top:3em;
   height:0;
   overflow:hidden;
   margin-left: 3em;
@@ -120,9 +120,14 @@ nav.navbar.navbar-default{
   height:100%;
 }
 
+
 .video-container > img{
-      margin:0 auto;
+      width:auto;
+      height:auto;
+      margin:8em 10em 0em 17em;
+
 }
+
 
 .iframe li.service-list{
     margin: 0em 0em 0em 0em;
@@ -131,12 +136,21 @@ nav.navbar.navbar-default{
 }
 
 .playbtn {
-    width:100%;
-    height:100%;
+      width:auto;
+      height:auto;
+      margin:10em 10em 0em 17em;
 
-    padding: 0em 0em 0em 0em;
-    margin: 0em 0em 0em 0em;
 }
+
+.playbtn,
+.largeunicorn {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 
 
  .vertical-line {
