--- a/css/quiz.css
+++ b/css/quiz.css
@@ -97,7 +97,7 @@ nav.navbar.navbar-default{
     border:1px solid #eee;
     width: 100%;
     height:100%;
-    text-align: center;
+    text-align: right;
 }
 
 
