--- a/css/stories.css
+++ b/css/stories.css
@@ -21,28 +21,42 @@ body {
     color: black;
     background-color: white;
 }
+.navbar-default {
+  padding:0em 0em 0em 0em;
+
+  max-width: 100%;
+}
+
+nav.navbar.navbar-default{
+  padding-left: 2em;
+/*  padding-right: 2em;*/
+}
 
 .navbar-nav > li{
-  padding:1em 3em 1em 3em;
-  border-left:1px solid grey;
+  padding:1em 3em 1em 4em;
+  border-left:1px solid #eee;
   text-align: center;
   height: 7em;
 
 }
 
-.navbar-nav > li a{
+.navbar-nav > li a {
   padding-top:2em;
   text-align: center;
-
-
 }
+
+
 .navbar-header{
   background-color: white;
   border-top-width: 2em;
+  padding: 0em 2.1em 0em 2em;
   margin: 0em 1.7em 0em 0em;
   height: 7em;
 }
 
+.navbar-header img{
+  margin: 1em 0em 2em 0em;
+}
 
 .stories-list {
   list-style-type: none;
@@ -59,12 +73,13 @@ body {
 }
 
 .social {
+    margin: 1em 0em 0em 0em;
+    padding: 1em 0em 1em 0em;
+    border:1px solid #eee;
+    width: 100%;
+    height:100%;
 
-    margin: 0em 1em 2em 0em;
-    padding: .5em 1em .5em 1em;
-    border:1px solid grey;
 }
-
 
 
 .stories{
@@ -81,7 +96,7 @@ body {
 }
 
 .caption-image{
-    margin: -10em 0em 0em 0em;
+    margin: 0em 0em 0em 0em;
     width: 30em;
     height: 22em;
 }
