--- a/css/style.css
+++ b/css/style.css
@@ -5,92 +5,106 @@ Description: Bootstrap Blog template converted to WordPress
 Version: 0.0.1
 Tags: bootstrap
 */
+* {
+  border-radius: 0 !important;
+}
 
 body {
     font-family: "Montserrat", sans-serif;
     transition: background-color .5s;
+    padding: -4em 0em 0em 0em;
 }
 
 
-
 #main {
-    transition: margin-left .5s;
-    padding: .8em;
+  transition: margin-left .5s;
+  padding: .8em;
+}
+
+.juicy-header {
+  text-align: center;
+
 }
 
 .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
     color: black;
     background-color: white;
 }
+.navbar-default {
+  padding:0em 0em 0em 0em;
+
+  max-width: 100%;
+}
+
+nav.navbar.navbar-default{
+  padding-left: 2em;
+/*  padding-right: 2em;*/
+}
 
 .navbar-nav > li{
-  padding:1em 3em 1em 3em;
-  border-left:1px solid grey;
+  padding:1em 3em 1em 4em;
+  border-left:1px solid #eee;
   text-align: center;
   height: 7em;
 
 }
 
-.navbar-nav > li a{
+.navbar-nav > li a {
   padding-top:2em;
   text-align: center;
-
-
 }
+
+
 .navbar-header{
   background-color: white;
   border-top-width: 2em;
+  padding: 0em 2.1em 0em 2em;
   margin: 0em 1.7em 0em 0em;
-  padding: 1em 0em 0em 0em;
   height: 7em;
 }
 
+.navbar-header img{
+  margin: 1em 0em 2em 0em;
+}
+
 .service-list {
-list-style-type: none;
-margin-left:0em;
-padding-left:0em;
-display: inline-block;
+  list-style-type: none;
+  margin:0em 0em 0em 0em;
+  padding:0em 0em 0em 0em;
+  display: inline-block;
 
 }
 
+.service-list img {
+  border:solid black ;
+  border-width: .3em;
+  height:3em;
+  width:4.3em;
+}
 
 .service-list p,.service-list h3 {
-text-align: right;
-display:inline-block;
-padding: 0;
+  text-align: right;
+  display:inline-block;
+  padding: 0;
+  font-weight: 900;
+  font-size: 1.2em;
+  color: black;
 }
 
 .social {
-    float: right;
-    margin: 0em 1em 2em 0em;
-    padding: .5em 1em .5em 1em;
-    border:1px solid grey;
-}
-
-
-.videos {
-    float: left;
-    font-size: 2em;
-}
-
-
-.iframe{
-    float: right;
-    border:solid;
-    border-width: 5px;
-    width:100%;
+    margin: 1em 0em 0em 0em;
+    padding: 1em 0em 1em 0em;
+    border:1px solid #eee;
+    width: 100%;
     height:100%;
-    text-align: center;
-    padding:.5em 0em 0em 0em;
-    margin: 5em 6em 0em 0em;
+    text-align: right;
 }
+
 
 .mainVideo {
   float: left;
 }
-.container {
-    padding: -1em 4em 3em 0em;
-}
+
 
 .quizzies   {
     width:30em;
@@ -105,7 +119,7 @@ padding: 0;
 }
 
 .stories{
-    width:22em;
+    width:30em;
     length:3em;
 }
 
