--- a/css/quiz.css
+++ b/css/quiz.css
@@ -100,6 +100,7 @@ nav.navbar.navbar-default{
     text-align: right;
 }
 
+.btn-primary { background: #000; }
 
 .video-container {
   position:relative;
