--- a/css/stories.css
+++ b/css/stories.css
@@ -78,8 +78,9 @@ nav.navbar.navbar-default{
     border:1px solid #eee;
     width: 100%;
     height:100%;
-
 }
+
+.btn-primary { background: #000; }
 
 
 .stories{
