--- a/css/video.css
+++ b/css/video.css
@@ -120,6 +120,8 @@ padding: 0;
   left: 0;
 }
 
+.btn-primary { background: #000; }
+
  .vertical-line {
     border-left: 1px solid #eee;
     height: 98em;
@@ -144,7 +146,7 @@ padding: 0;
 }
 
 .adimage {
-    padding: 0em 10em 1em 0em;
+    padding: 0em 1em 1em 0em;
     margin: 0em 0em 1em 0em;
     max-width: 100%;
     max-height: 100%;
