--- a/css/home.css
+++ b/css/home.css
@@ -37,7 +37,7 @@ body {
 }
 
 nav.navbar.navbar-default{
-  padding-left: 2em;
+  padding-left: 0em;
 /*  padding-right: 2em;*/
 }
 
@@ -92,13 +92,13 @@ nav.navbar.navbar-default{
 }
 
 .social {
-    margin: 1em 0em 0em 0em;
-    padding: 1em 0em 1em 0em;
-    border:1px solid #eee;
-    width: 100%;
-    height:100%;
+    float: right;
+    margin: 0em 1em 2em 0em;
+    padding: .5em 1em .5em 1em;
+    border:1px solid grey;
 
 }
+
 
 
 .video-container {
