--- a/css/quiz.css
+++ b/css/quiz.css
@@ -92,13 +92,13 @@ nav.navbar.navbar-default{
 }
 
 .social {
-    margin: 1em 0em 0em 0em;
-    padding: 1em 0em 1em 0em;
-    border:1px solid #eee;
-    width: 100%;
-    height:100%;
-    text-align: right;
+    float: right;
+    margin: 0em 0em 2em 0em;
+    padding: .5em 1em .5em 1em;
+    border:1px solid grey;
+
 }
+
 
 .btn-primary { background: #000; }
 
@@ -180,7 +180,7 @@ nav.navbar.navbar-default{
     font-size: 1.3em;
     font-weight: 900;
     color:#808080;
-    margin-left: 1.5em;
+    /*margin-left: 1.5em;*/
 }
 
 
