--- a/css/style.css
+++ b/css/style.css
@@ -92,13 +92,13 @@ nav.navbar.navbar-default{
 }
 
 .social {
-    margin: 1em 0em 0em 0em;
-    padding: 1em 0em 1em 0em;
-    border:1px solid #eee;
-    width: 100%;
-    height:100%;
-    text-align: right;
+    float: right;
+    margin: 0em 1em 2em 0em;
+    padding: .5em 1em .5em 1em;
+    border:1px solid grey;
+
 }
+
 
 
 .mainVideo {
