--- a/css/video.css
+++ b/css/video.css
@@ -11,7 +11,6 @@ body {
     transition: background-color .5s;
 }
 
-
 #main {
     transition: margin-left .5s;
     padding: .8em;
@@ -66,10 +65,7 @@ padding: 0;
 
 }
 
-.videos {
-    float: left;
-    font-size: 2em;
-}
+
 .video-container {
   position:relative;
   padding-bottom:56.25%;
@@ -157,8 +153,24 @@ padding: 0;
     height:100%;
     margin:0em 0em 0em 10em;
     padding: 0em 1em 6em 0em;
-
 }
+
+ h2 {
+    font-family: Montserrat extra bold 1em;
+    font-size: 1.7em;
+    font-weight: 900;
+    color:#808080;
+    margin-left: 1.5em;
+}
+
+ h3 {
+    font-family: Montserrat extra bold 1em;
+    font-size: 1.3em;
+    font-weight: 900;
+    color:#808080;
+    margin-left: 1.5em;
+}
+
 
 .email {
     float: right;
@@ -167,7 +179,6 @@ padding: 0;
     padding:0em 0em 0em 0em;
     margin:0em -1em 0em 28em;
     border-style: solid;
-
 }
 
 @media screen and (max-width: 500px) {
