--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,8 @@ nav.navbar.navbar-default{
 
 .navbar-header img{
   margin: 1em 0em 2em 0em;
+  max-height: 100%;
+  max-width: 100%;
 }
 
 .service-list {
