--- a/css/home.css
+++ b/css/home.css
@@ -23,6 +23,8 @@ body {
 
 .juicy-header {
   text-align: center;
+  max-height: 100%;
+  max-width: 100%;
 
 }
 
@@ -31,43 +33,48 @@ body {
     background-color: white;
 }
 .navbar-default {
-  max-height: 100%;
+  padding:0em 0em 0em 0em;
   max-width: 100%;
+  max-height: 100%;
 }
 
 nav.navbar.navbar-default{
-  padding-left: 0em;
-  max-height: 100%;
   max-width: 100%;
+  max-height: 100%;
 }
 
 .navbar-nav > li{
-  padding:1em 3em 1em 4em;
-  margin:0em 0em 0em 0em;
+  padding:1em 2em 1em 4em;
   border-left:1px solid #eee;
   text-align: center;
+  /*height: 7em;
+*/  max-width: 100%;
   max-height: 100%;
-  max-width: 100%;
+
 }
 
 .navbar-nav > li a {
   padding-top:2em;
   text-align: center;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 
 .navbar-header{
   background-color: white;
   border-top-width: 2em;
-  padding: 0em 2.1em 0em 2em;
-  margin: 0em 1.7em 0em 0em;
+  padding: 2em 2.1em -1em 2em;
+  margin: 0em 2.7em -2em 0em;
   height: 7em;
+
 }
 
 .navbar-header img{
+  margin: 1em 3em 2em 2em;
+  padding: 0em 2em 0em 0em;
   max-height: 100%;
   max-width: 100%;
-  margin: 1em 0em 2em 0em;
 }
 
 .service-list {
@@ -104,7 +111,7 @@ nav.navbar.navbar-default{
 
 .video-container {
   position:relative;
-  padding-bottom:56.25%;
+  padding-bottom:55.25%;
   padding-top:0em;
   height:0;
   overflow:hidden;
@@ -198,10 +205,10 @@ nav.navbar.navbar-default{
 }
 
 .stories{
-    width:100%;
-    length:100%;
-    padding: 0em 0em 0em 0em;
-    margin: 3em 0em 0em -1em;
+    font-size: 1em;
+    color:#808080;
+    padding: 1em 0em 0em 0em;
+    margin: 3em 0em 1em 0em;
 }
 
 
@@ -209,8 +216,9 @@ nav.navbar.navbar-default{
     margin: 3em 2em 0em 0em;
     padding: 0em 0em 0em 4em;
     width: 100%;
-    height: 100%;
+    height: auto;
     }
+
 
 @media screen and (max-width: 500px) {
     div.mobile-collapse{
