fixed overlay with float left

--- a/css/home.css
+++ b/css/home.css
@@ -44,12 +44,10 @@ nav.navbar.navbar-default{
 }
 
 .navbar-nav > li{
-  padding:1em 2em 1em 4em;
+  padding:1em 2em 1em 2em;
   border-left:1px solid #eee;
   text-align: center;
-  /*height: 7em;
-*/  max-width: 100%;
-  max-height: 100%;
+  height: 7em;
 
 }
 
@@ -62,10 +60,10 @@ nav.navbar.navbar-default{
 
 
 .navbar-header{
-  background-color: white;
+  /*background-color: white;*/
   border-top-width: 2em;
-  padding: 2em 2.1em -1em 2em;
-  margin: 0em 2.7em -2em 0em;
+  padding: 2em 2em -1em 2em;
+  margin: 0em 2em -2em 0em;
   height: 7em;
 
 }
@@ -101,7 +99,7 @@ nav.navbar.navbar-default{
 
 .social {
     float: right;
-    margin: 0em 1em 2em 0em;
+    margin: 0em 2em 2em 0em;
     padding: .5em 1em .5em 1em;
     border:1px solid grey;
 
@@ -128,8 +126,10 @@ nav.navbar.navbar-default{
   height:100%;
 }
 
+.col-lg-pull-6  {
+  padding-top: 1em;
 
-
+}
 
 
 .iframe li.service-list{
@@ -142,6 +142,7 @@ nav.navbar.navbar-default{
       width:auto;
       height:auto;
       margin:10em 10em 0em 17em;
+
 
 }
 
@@ -158,7 +159,8 @@ nav.navbar.navbar-default{
 
  .vertical-line {
     border-left: 1px solid #eee;
-    height: 98em;
+    height: 30em;
+
         }
 
 .videos {
@@ -197,7 +199,7 @@ nav.navbar.navbar-default{
 .tweets{
     width:100%;
     length:100%;
-
+    padding-bottom: 0em;
 }
 
 .tweets li.service_list{
@@ -207,16 +209,17 @@ nav.navbar.navbar-default{
 .stories{
     font-size: 1em;
     color:#808080;
-    padding: 1em 0em 0em 0em;
-    margin: 3em 0em 1em 0em;
+    padding: 7em 0em 0em 0em;
+    margin: 0em 0em 0em 0em;
 }
 
 
 .adimage {
-    margin: 3em 2em 0em 0em;
-    padding: 0em 0em 0em 4em;
+    margin: 0em 0em 0em 0em;
+    padding: 7em 0em 0em 0em;
     width: 100%;
-    height: auto;
+    height: 100%;
+
     }
 
 
@@ -227,3 +230,29 @@ nav.navbar.navbar-default{
       margin-right: 0;
     }
 }
+
+@media (min-width: 825px) {
+
+
+  /* Navbar positioning foo */
+
+  .navbar-wrapper .container {
+    padding-right: 10px;
+    padding-left: 10px;
+
+  }
+  .navbar-wrapper .navbar {
+    padding-right: 0;
+    padding-left: 0;
+  }
+
+  /* The navbar becomes detached from the top, so we round the corners */
+  .navbar-wrapper .navbar {
+    border-radius: 4px;
+  }
+  @media screen and  (max-width: 764px) {
+  .vertical-line{
+    visibility: hidden;
+  }
+}
+
