--- a/css/home.css
+++ b/css/home.css
@@ -102,7 +102,6 @@ nav.navbar.navbar-default{
     margin: 0em 2em 2em 0em;
     padding: .5em 1em .5em 1em;
     border:1px solid grey;
-
 }
 
 
@@ -128,6 +127,7 @@ nav.navbar.navbar-default{
 
 .col-lg-pull-6  {
   padding-top: 1em;
+  float: left;
 
 }
 
@@ -159,7 +159,7 @@ nav.navbar.navbar-default{
 
  .vertical-line {
     border-left: 1px solid #eee;
-    height: 30em;
+    height: 80em;
 
         }
 
@@ -167,8 +167,8 @@ nav.navbar.navbar-default{
     /*float: left;*/
     font-size: 1em;
     color:#808080;
-    padding: 1em 0em 0em 0em;
-    margin: 0em 0em 1em 0em;
+    padding: 0em 0em 0em 0em;
+    margin: 0em 0em 0em 0em;
 }
 
   h2 {
@@ -202,21 +202,22 @@ nav.navbar.navbar-default{
     padding-bottom: 0em;
 }
 
-.tweets li.service_list{
-
-}
 
 .stories{
     font-size: 1em;
     color:#808080;
-    padding: 7em 0em 0em 0em;
+    padding: 0em 0em 0em 0em;
     margin: 0em 0em 0em 0em;
 }
 
+.stories img{
+
+
+}
 
 .adimage {
     margin: 0em 0em 0em 0em;
-    padding: 7em 0em 0em 0em;
+    padding: 0em 0em 0em 3em;
     width: 100%;
     height: 100%;
 
